IGNITE-20730 Fix dnsresolve test.