@@ -1001,6 +1001,8 @@
                                 <arg>--add-exports</arg>
                                 <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
                                 <arg>--add-exports</arg>
+                                <arg>java.base/sun.net.util=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg>
                                 <arg>java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</arg>
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
